# fcitx5-configtool

./: CMakeLists.txt
src/configtool/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/kcm/: main.cpp
src/lib/configlib/: font.cpp  model.cpp  model.h
src/lib/configwidgetslib/: erroroverlay.cpp  erroroverlay.ui  listoptionwidget.cpp
src/migrator/lib/: migratorfactory.cpp
